Fixed issue with css link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>
             Julian's Google!
         </title>
-        <link href="css/style.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet">
     </head>
 
     <body>
